algo mejora, y algo empeora

--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./estilos/adminListadoProductos.css/" />
+    <link rel="stylesheet" href="/estilos/adminListadoProductos.css/" />
   </head>
   <body>
     <%- include('../partials/header') %>
@@ -41,7 +41,7 @@
         <h1 class="title-list__text">LISTADO DE PRODUCTOS</h1>
         <div class="title-list__add-container">
           <span class="title-list__add-text">AGREGAR</span>
-          <a href="../admin/editar-item.html" class="title-list__buttom-link">
+          <a href="./edit" class="title-list__buttom-link">
             <i
               class="fa-solid fa-plus bottom-decrease-increase title-list__add-bottom"
             ></i>
@@ -72,7 +72,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -95,7 +95,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -118,7 +118,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -141,7 +141,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">STAR WARS</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -164,7 +164,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">POKEMON</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -187,7 +187,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">POKEMON</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -233,7 +233,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">POKEMON</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -256,7 +256,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">POKEMON</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -279,7 +279,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -302,7 +302,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -325,7 +325,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
@@ -348,7 +348,7 @@
             </p>
             <p class="listProducts__text-info" id="Categoria">HARRY POTTER</p>
             <a
-              href="/public/pages/admin/editar-item.html"
+              href="./edit"
               class="listProducts__edit-link"
             >
               <i class="fa-solid fa-pen listProducts__edit-bottom"></i>
