--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../estilos/login.css" />
+    <link rel="stylesheet" href="/estilos/register.css" />
   </head>
   <body>
     <%- include ('../partials/header') %>
