--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -19,10 +19,11 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../estilos/login.css" />
+    <link rel="stylesheet" href="/estilos/login.css" />
   </head>
 
   <body>
+
     <%- include('../partials/header') %>
 
     <!-- formulario -->
