--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./estilos/style.css" />
+    <link rel="stylesheet" href="/estilos/style.css" />
   </head>
 
   <body>
@@ -30,7 +30,7 @@
       <article class="hero__content container">
         <h3 class="hero__title">Nuevos Ingresos</h3>
         <p class="hero__text">Descubri el proximo Funko Pop de tu coleccion</p>
-        <a class="hero__link" href="../public/pages/shop/shop.html">SHOP</a>
+        <a class="hero__link" href="./shop/shop">SHOP</a>
         <!-- con css agregamos la imagen de fondo -->
       </article>
     </section>
@@ -43,7 +43,7 @@
           <p class="collection__text">
             Disfruta de una saga que sigue agregando personajes a tu coleccion
           </p>
-          <a class="collection__link" href="../public/pages/shop/shop.html"
+          <a class="collection__link" href="/"
             >VER COLECCION</a
           >
         </article>
@@ -68,7 +68,7 @@
             Atrapa a todos los que puedas y disfruta de una coleccion llena de
             amigos
           </p>
-          <a class="collection__link" href="../public/pages/shop/shop.html"
+          <a class="collection__link" href="/"
             >VER COLECCION</a
           >
         </article>
@@ -79,7 +79,7 @@
           <p class="collection__text">
             Revive los recuerdos de una saga llena de magia y encanto
           </p>
-          <a class="collection__link" href="../public/pages/shop/shop.html"
+          <a class="collection__link" href=""
             >VER COLECCION</a
           >
         </article>
@@ -153,7 +153,7 @@
 
             <li class="slider__item glide__slide">
               <article class="card-item">
-                <a class="card-item__link" href="">
+                <a class="card-item__link" href="/">
                   <picture class="card-item__cover">
                     <span class="card-item__tag">NUEVO</span>
                     <img
