--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,10 +3,10 @@
         <nav class="footer__navbar navbar">
             <ul class="footer__list navbar__list">
                 <li class="footer__item">
-                    <a href="auth/register" class="footer__link navbar__link"> REGISTRARSE</a>
+                    <a href="/auth/register" class="footer__link navbar__link"> REGISTRARSE</a>
                 </li>
                 <li class="footer__item">
-                    <a href="auth/login" class="footer__link navbar__link">LOGIN</a>
+                    <a href="/auth/login" class="footer__link navbar__link">LOGIN</a>
                 </li>
                 <li class="footer__item">
                     <a href="/contact" class="footer__link navbar__link">CONTACTO</a>
@@ -19,7 +19,7 @@
             <p class="footer__text"> Comision 23568 Grupo 7</p>
         </div>
         <div class="footer__logo ">
-            <img src="/img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
+            <img src="/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="footer__img">
         </div>
     </div>
 </footer>
