--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -14,7 +14,7 @@
         <ul class="navbar__list">
           <li class="navbar__item navbar__item--with-submenu">
             <a
-              href="/public/pages/shop/shop.html"
+              href="/shop"
               class="navbar__link navbar__link--icon"
               >SHOP<i
                 class="fa-solid fa-angle-right icon-animation"
@@ -23,15 +23,15 @@
             ></a>
             <ul class="submenu">
               <li class="submenu__item">
-                <a href="shop?filter=funkos" class="submenu__link">FUNKOS</a>
+                <a href="/shop?filter=funkos" class="submenu__link">FUNKOS</a>
               </li>
               <li class="submenu__item">
-                <a href="shop?filter=llaveros" class="submenu__link"
+                <a href="/shop?filter=llaveros" class="submenu__link"
                   >LLAVEROS</a
                 >
               </li>
               <li class="submenu__item">
-                <a href="shop?filter=remeras" class="submenu__link">REMERAS</a>
+                <a href="/shop?filter=remeras" class="submenu__link">REMERAS</a>
               </li>
             </ul>
           </li>
