--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href= '../../../public/estilos/editar-item.css'>
+    <link rel="stylesheet" href= '/estilos/editar-item.css'>
 
   </head>
   <body>
