--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="../estilos/shop.css" />
+    <link rel="stylesheet" href="/estilos/shop.css" />
   </head>
 <body>
     
@@ -74,8 +74,30 @@
         <main> <!-- Inicio Main -->
     
             <section class="catalogue">
-                <div class="catalogue__grilla">
-                </div>
+               <ul class ="shop__items">
+                <% data.forEach (item =>{ %>
+                    <li class="shop__item">
+                 <article class="card-item">
+                    <a  class= "card-item__link"  href="/shop/item/<%= item.product_id %>">
+                            <picture class="card-item__cover">
+                                <span class="card-item__tag">Nuevo</span>
+                                <img class="card-item__img--front" src= "<%= item.img_front  %>" alt="imagen">
+                                <img class="card-item__img--back" src="<%= item.img_back %>" alt="imagen en caja">
+                            </picture>
+                         <div class="card-item__content">
+                              <p class="card-item__licence"><%= item.category_name %></p>
+                              <h4 class="card-item__name"><%= item.product_name %></h4>
+                              <p class="card-item__price">$ <%= item.product_price %>.-</p>
+                              <p class="card-item__promo"> CUOTAS SIN INTERES <%= item.dues %></p>
+                         </div>
+                    </a>
+                 </article>
+
+                 </li>
+
+                 <%   }) %>
+
+               </ul>
             </section>
     
             <section">
@@ -98,7 +120,7 @@
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="/public/js-fede/productsData.js"></script>
     <script src="/public/js-fede/shop.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script> 
 </body>
 
 </html>
