config yproduct. model

--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/estilos/adminListadoProductos.css/" />
+    <link rel="stylesheet" href="/estilos/adminListadoProductos.css" />
   </head>
   <body>
     <%- include('../partials/header') %>
@@ -359,7 +359,7 @@
       </section>
     </main>
 
-    <%- include('../partials/footer') %>;
+    <%- include('../partials/footer') %>
 
     <script src="/public/js-fede/ListadoDeProducto.js"></script>
   </body>
