--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -26,7 +26,7 @@
 <%- include('../partials/header') %>
 
     <main class="container">
-      <!-- Seccion con el Baby Yoda BLUEBALL -->
+      
       <section class="item">
         </article>
       </section>
@@ -42,12 +42,12 @@
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="/img/multimedia/star-wars/trooper-1.webp"
+                      src="/img/multimedia<%= item.img_front  %>"
                       alt="Figura coleccionable Funko de un StormTrooper"
                     />
                     <img
                       class="card-item__img--back"
-                      src="/img/multimedia/star-wars/trooper-box.webp"
+                      src="/img/multimedia <%= item.img_back %>"
                       alt="Figura coleccionable Funko de un StormTrooper en caja"
                     />
                   </picture>
@@ -55,7 +55,7 @@
                     <p class="card-item__license"><%= item.license_name %></p>
                     <h4 class="card-item__name"><%= item.product_name %></h4>
                     <p class="item_description"><%= item.product_description %></p>
-                    <p class="card-item__price">$ <%= item.product_price %>.-</p>
+                    <p class="card-item__price">$ <%= item.price %>.-</p>
                     
                   </div>
                 </a>
