--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 
-    <header>
+    <header class="header">
       <nav class="navbar container">
         <div class="navbar__logo">
           <a href="/" class="navbar__link-banner">
