--- a/public/estilos/login.css
+++ b/public/estilos/login.css
@@ -1,58 +1,104 @@
-@font-face {
-    font-family: 'raleway';
-    src: url(/public/fonts/Raleway-VariableFont_wght.ttf);
+:root {
+    /* paleta de colores */
+    --primary-solid: rgb(255, 51, 51);
+    --primary-900: rgb(255, 51, 51, 0.9);
+    --primary-500: rgb(255, 51, 51, 0.5);
+    --primary-300: rgb(255, 51, 51, 0.3);
+
+    --secondary-solid: rgb(29, 132, 181);
+    --secondary-900: rgb(29, 132, 181, 0.9);
+    --secondary-500: rgb(29, 132, 181, 0.5);
+    --secondary-300: rgb(29, 132, 181, 0.3);
+
+    --dark-solid: rgb(31, 31, 31);
+    --dark-900: rgb(31, 31, 31, 0.9);
+    --dark-500: rgb(31, 31, 31, 0.5);
+    --dark-300: rgb(31, 31, 31, 0.3);
+
+    /* background oscuro y claro: */
+    --dark-bg--solid: #30343f;
+    --light-bg-solid: #fafaff;
+    --light-font-solid: #ffffff;
+
+    /* tipografias: */
+    --base-font: Arial, Helvetica, sans-serif;
+    --alternative-font: Verdana, Geneva, Tahoma, sans-serif;
+
+    /* font-size */
+    --font-display: 4.6em;
+    --font-jumbo: 3.8em;
+    --font-xlarge: 3em;
+    --font-large: 2.4em;
+    --font-medium: 1.8em;
+    --font-small: 1.6em;
+    --font-xsmall: 1.4em;
+
+    /* spacing */
+    --spacing-128: 12.8rem;
+    --spacing-68: 6.8rem;
+    --spacing-36: 3.6rem;
+    --spacing-28: 2.8rem;
+    --spacing-24: 2.4rem;
+    --spacing-20: 2rem;
+    --spacing-16: 1.6rem;
+    --spacing-12: 1.2rem;
+    --spacing-8: 0.8rem;
 }
 
-@font-face {
-    font-family: 'inter';
-    src: url(/public/fonts/Inter-VariableFont_slnt\,wght.ttf);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-:root{
 
-    /* COLORES */
-    --color-red: #FF3333;
-    --color-light-red: rgba(255,51,51,0.5);
-
-    --color-blue: #1D84B5;
-    --color-light-blue: rgb(29, 132, 181,0.7);
-
-    --color-dark-bg: #30343F;
-    --color-gray: rgb(79, 79, 79,0.8);
-    --color-light-gray: rgb(79, 79, 79,0.4);
-
-    --color-dark: #1F1F1F;
-    --color-light-dark: rgb(31, 31, 31,0.8);
-
-    --light-font: #FFFFFF;
-    --light-bg: #FAFAFF;
-
-    /* TIPOGRAFIA */
-    --font-base: 'Inter', sans-serif;
-    --alternative-font: 'Raleway', sans-serif;
-
+html {
+    font-family: var(--base-font);
+    font-size: 62.5%;
+    color: var(--dark-solid);
 }
 
-/* 
-%%%%%%%%%%%%%%%%
-%%%%%HEADER%%%%% -> PROVISIONAL
-%%%%%%%%%%%%%%%%
-*/
+a {
+    text-decoration:none;
+    font-family: inherit;
+    color: inherit;
+}
 
- img{
+header,
+footer {
+    font-family: var(--alternative-font);
+    color: var(--light-font-solid);
+}
+
+ul,
+li {
+    list-style-type: none;
+    color: white;
+}
+
+p {
+    font-size: 1.8em;
+}
+
+/* fijo el width que se referira siempre a la etiqueta del padre */
+img {
     width: 100%;
 }
 
-.header{
-    background-color: var(--color-dark-bg);
-    padding: 10px;
-}
-
-.container{
-    max-width: 75rem;
+/* limitamos el ancho del contenedor de la pagina a 1200px, que es lo maximo que crecera aun en resoluciones mayores */
+.container {
+    max-width: 1200px;
     margin: 0 auto;
 }
 
+/* header */
+header {
+    background-color: var(--dark-bg--solid);
+    padding: var(--spacing-36);
+    position: relative;
+    top: 0;
+    width: 100%;
+}
 
 .navbar{
     background-color: var(--color-dark-bg);
@@ -97,7 +143,7 @@
 }
 
 .navbar__item-cart{
-    background-color: var(--color-red);
+    background-color: var(--primary-900);
     padding: 5px;
     border-radius: 4px;
     position: absolute;
@@ -106,7 +152,7 @@
 .submenu{
     display: none;
     position: absolute;
-    background-color: var(--color-dark-bg);
+    background-color: var(--dark-bg--solid);
     font-size: 13px;
     list-style: none;
     padding: 0px;
@@ -126,247 +172,166 @@
     color: #BCBCBC;
 }
 
-.container-shadow{
-    border-radius: 10px;
-    -webkit-box-shadow: 0px 0px 5px 3px rgba(148,148,148,0.58);
-    -moz-box-shadow: 0px 0px 5px 3px rgba(148,148,148,0.58);
-    box-shadow: 0px 0px 5px 3px rgba(148,148,148,0.58);
-} */
+/*LOGIN*/
 
-.main{
-    height: 100vh;
-}
-.formulario {
-    font-family: 'Times New Roman', Times, serif;
+.form__container {
+    /* height: 60vh;*/
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: flex-start;
-    margin: 5px;
-    padding: 15px;
-    height: 100vh;
-    /* border: 12px solid red; */
-    /* gap: 30px; */
-}
-.formulario__title{
-    font-size: 80px;
-    font-family: sans-serif;
-    font-weight: bold;
-    /* border: 2px solid black; */
-    
-}
-.formulario__description{
-    /* border: 2px solid black; */
-    font-size: 30px;
+    min-height: 55vh;
+    padding-bottom: 30px;
+  }
+  
+  /* form{
+      height: 100%;
+  } */
+  
+  .form__container h2 {
     font-family: var(--alternative-font);
-    
-}
-.formulario__container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    /* border: 2px solid black; */
-    font-size: 30px;
-    margin: 20px;
-    width: 50%;
-
-}
-.formulario__container div:nth-child(6){
-    /* border: 2px solid black; */
+    font-size: 4.2em;
+    font-weight: 700;
     margin-top: 20px;
-}
-.formulario__item-text{
-    font-family: var(--font-base);
-    font-weight: 400;
-    text-align: left;
-    /* border: 2px solid violet; */
-    min-width: 300px;
-}
-.formulario__item{
-    /* border: 6px solid black; */
-    border: none;
-    border-bottom: 1px solid var(--color-red);
-    font-family: var(--alternative-font);
-    font-size: large;
-    width: 300px;
-    height: 40px;
-    padding: 5px;
     margin-bottom: 20px;
-    min-width: 420px;
-}
-
-.formulario__item:focus{
-    outline: none;
-    border-bottom: 3px solid red;
-}
-
-.formulario__btn-container{
+  }
+  
+  .form-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  }
+  
+  .input_log {
+    font-family: var(--base-font);
+    font-size: var(--font-large);
+    font-weight: 400;
+    border-bottom: #ff3333;
+    width: 100%;
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-bottom: 0;
     display: flex;
+    align-content: center;
     justify-content: center;
-    align-items: center;
-    gap: 50px;
+    align-items: baseline;
+    gap:45px;
+  
+  }
+  
+  .input_log [placeholder] {
+    font-family: var(--base-font);
+    font-size: 16px;
+    font-weight: 400;
+  }
+  
+  .input_log input {
+    border: none;
+    border-bottom: 2px solid #ff3333;
+  }
+  
+  .pass input {
+    margin-left: -25px;
+  }
+  
+  .input_box{
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: baseline;
+      gap: 60px;
+      font-family: var(--base-font);
+      font-weight: 400;
+      padding-bottom: 20px;
+  }
+  
+  .input_box button{
+      font-size:1.2em ;
+      background-color: #FF3333;
+      border: none;
+      padding: 10px 20px;
+      color: #FFFFFF;
+  
+  }
+  
+  .input_box  label {
+      font-size: 1.8em;
+  
+  }
+  .email{
+    padding: 5px;
+  }
+  .password{
+    padding: 5px;
+  }
+  .mycheck{
+      width: 20px;
+      margin-right: 6px;
+      border-radius: 3px;
+      border:2px solid #1f1f1f;
+  }
+  
+  .form_pass a {
+      color: #1D84B5;
+      font-size: 14px;
+      font-weight: 400;
+      padding-left: 165px;
+  }
+  
+  .error-message {
+    color: red;
+    font-size: 10px;
+     height: 10px;
+     padding-top: 0;
+  }
+  
+  /* footer */
+  .footer{
+    /* border: 2px solid red; */
+    background-color: var(--dark-bg--solid);
+    bottom: 0;
+    width: 100%;
 }
-.formulario__condiciones-container{
+
+.footer__container{
+    background-color: var(--dark-bg--solid);
     display: flex;
-    justify-content: center;
-    align-items: center;
-    /* border: 2px solid black; */
-    padding: 10px;
-    gap: 5px;
-}
-.formulario__btn{
-    font-family: var(--font-base);
-    font-weight: 500;
-    width: 150px;
-    padding: 15px;
-    border-radius: 20px;
-    cursor: pointer;
-    color: #fff;
-    background-color: rgb(211, 49, 49);
-    
-}
-.formulario__btn:active{
-    background-color: rgb(255, 0, 0);
-
-}
-.formulario__btn-check{
-    width: 20px;
-    height: 20px;
-    /* border: 2px solid black; */
-}
-.formulario__condiciones-text{
-    font-family: var(--font-base);
-    font-size: medium;
-    margin: 0px;
-    /* border: 2px solid black; */
-}
-.formulario__condiciones-text-blue{
-    color: rgb(0, 132, 255);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* footer */
-.footer {
-    max-width: 100%;
-    background-color: #333;
-
-    padding: 20px;
-
-    text-align: center;
-
-    color: #fff;
-
-    display: flex;
-
     justify-content: space-between;
-
     align-items: center;
-    clear: none;
+    height: 240px;
 }
 
-
-.footer ul {
-
-    list-style-type: none;
-
-    padding: 0;
-
+.footer__list{
+    display: block;
+    padding: 15px;
 }
 
-
-.footer ul li {
-
-    display: inline;
-
-    margin: 0 10px;
-
+.footer__item{
+    list-style: none;
 }
 
-
-.footer ul li a {
-
-    color: #fff;
-
-    text-decoration: none;
-
+.footer__rights{
+    padding: 6px;
+    align-self: flex-end;
 }
 
-
-.footer ul li a:hover {
-    text-decoration: underline;
+.footer__text{
+    color: var(--light-font);
 }
 
-/* formulario */
-
-.container{
-    max-width: 75rem;
-    margin: 0 auto;
-}
-
-
-
-/* footer */
-.pie-pagina {
-    background-color: #1D1A2F;
-    padding: 20px;
-    text-align: center;
-    color: #ffffff;
-    display: flex;
-    justify-content: space-around;
-}
-
-.pie-pagina ul {
-    list-style-type: none;
-    padding: 0;
-    font-size: 1.5rem;
-}
-
-.contacto {
-    font-size: 2rem;
-}
-
-.pago {
-    font-size: 2rem;
+@media only screen and (max-width: 576px){
+  
+    .form__container h2 {
+        font-size: 2.4em;
+        text-align: center;
+    }
+  
+    .input_log{
+        font-size: 2em;
+    }
+  
+    .error-message{
+        font-size: 8px;
+    }
 }
