--- a/public/estilos/slider-shop.css
+++ b/public/estilos/slider-shop.css
@@ -12,7 +12,7 @@
     text-transform: uppercase;
 }
 
-iconify-icon{
+.iconify-icon{
     color: var(--dark-bg-solid);
     font-size: var(--font-small);
     font-weight: 700;
