--- a/public/estilos/style.css
+++ b/public/estilos/style.css
@@ -285,11 +285,14 @@ header {
   font-size: var(--font-display);
 }
 /* quitamos estos estilos para que no entren en conflicto con los de la libreria glide */
-/* .slider__items {
-  display: flex;
-  gap: var(--spacing-12);
-  padding: var(--spacing-24) var(--spacing-16);
-} */
+.slider__items {
+  /* left: 40px; */
+  width: 800px;
+}
+.glide__slide {
+  /* border: 1px solid black; */
+  width: 400px;
+}
 .glide__arrow--left,
 .glide__arrow--right {
   width: 40px;
@@ -302,62 +305,36 @@ header {
   font-weight: 700;
 }
 
-.card-item__cover {
-  display: flex;
-  gap: var(--spacing-20);
-}
+/* PICTURE DE SLIDER */
 
-.card-item__tag {
-  font-size: var(--font-xsmall);
-  background-color: var(--primary-solid);
-  color: var(--light-font-solid);
-  padding: var(--spacing-8) var(--spacing-12);
-  position: absolute;
-  right: 100px;
-}
-
-.card-item {
+/* .card-item {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  max-width: 400px;
   height: 500px;
   position: relative;
   overflow: hidden;
+} */
+.card-item__link{
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  height: 500px;
+  position: relative;
+  /* border: 2px solid red; */
 }
 
-.card-item__img--front,
-.card-item__img--back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: opacity 2s;
-  padding: var(--spacing-128) var(--spacing-24) var(--spacing-20)
-    var(--spacing-20);
-}
-
-.card-item__img--front {
-  opacity: 1;
-}
-
-.card-item__img--back {
-  opacity: 0;
-}
-
-.card-item:hover .card-item__img--front {
-  opacity: 0;
-}
-
-.card-item:hover .card-item__img--back {
-  opacity: 1;
+.card-item__cover {
+  /* border: 2px solid blue; */
 }
 
 .card-item__content {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-12);
-  padding: var(--16);
+  padding: 5px;
+  /* display: none; */
 }
-
 .card-item__license {
   font-size: var(--font-xsmall);
   color: var(--dark-solid);
@@ -380,8 +357,42 @@ header {
   color: var(--secondary-solid);
   font-weight: 700;
 }
+.card-item__img--front{
+  position: absolute;
+  transition: opacity 0.5s;
+}
+.card-item__img--back {
+  position: absolute;
+  transition: opacity 0.5s;
+}
 
-/*footer*/
+.card-item__img--front {
+  opacity: 1;
+}
+.card-item__img--back {
+  opacity: 0;
+}
+.card-item:hover .card-item__img--front {
+  opacity: 0;
+}
+.card-item:hover .card-item__img--back {
+  opacity: 1;
+}
+.card-item__tag{
+  font-family: var(--base-font);
+  display: block;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  background-color: red;
+  padding: 10px;
+}
+
+/* 
+%%%%%%%%%%%%%%%
+%%% ITEM CSS %%
+%%%%%%%%%%%%%%% 
+*/
 .item {
   display: flex;
   padding: var(--spacing-48);
@@ -474,6 +485,7 @@ header {
   text-align: center;
   font-size: var(--font-medium);
   width: 80px;
+  height: 50px;
 }
 .item__agregate {
   font-size: var(--font-small);
@@ -489,15 +501,6 @@ header {
   color: rgb(48, 114, 255);
 }
 
-/*animacion
-@keyframes fade{
-  0%{
-    opacity: 0;
-  }
-  100%{
-    opacity: 1;
-  }
-}*/
 .footer{
   background-color: var(  --dark-bg--solid);
   border-radius: 25px;
@@ -529,3 +532,139 @@ header {
   font-size: var(--font-large);
 }
 
+@media (max-width: 1200px){
+  .container{
+    max-width: 1000px;
+  }
+  .item{
+    align-items: center;
+    /* border: 1px solid black; */
+  }
+  .item__card{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    /* border: 1px solid red; */
+  }
+  .item__card-front{
+    max-width: 100%;
+  }
+  .card-item__link{
+    max-width: 270px;
+    height: 500px;
+    /* border: 2px solid red; */
+  }
+}
+@media (max-width: 999px){
+  .container{
+    max-width: 900px;
+  }
+  .item{
+    align-items: center;
+  }
+  .item__card{
+    max-width: 200px;
+    max-height: 200px;
+    object-fit:scale-down;
+  }
+  .item__info{
+    font-size: 8px;
+  }
+  .item__quantity{
+    width: 30px;
+    height: 30px;
+  }
+  .item__input{
+    height: 30px;
+  }
+  .item__agregate{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+  }
+  .slider__title{
+    font-size: 40px;
+  }
+  .card-item__link{
+    max-width: 200px;
+    height: 500px;
+    /* border: 2px solid red; */
+  }
+}
+@media (max-width: 786px){
+  .slider__items {
+    left: 80px;
+  }
+}
+@media (max-width: 670px){
+  .item__card{
+    max-width: 150px;
+    max-height: 150px;
+  }
+  .item__cart{
+    flex-direction: column;
+  }
+  .item__agregate{
+    width: fit-content;
+  }
+  .glide__slide {
+    width: 150px; /* Tamaño predeterminado de las tarjetas */
+  }
+  .slider__items {
+    left: 50px;
+  }
+}
+@media (max-width: 584px){
+  .slider__items {
+    left: 0px;
+  }
+}
+@media (max-width: 500px){
+  .item{
+    flex-direction: column;
+  }
+  .item__card{
+    max-width: 200px;
+    max-height: 200px;
+  }
+  .slider__items {
+    left: 0px;
+  }
+  .card-item__link{
+    width: 200px;
+    /* height: 500px; */
+    /* border: 2px solid red; */
+  }
+}
+@media (max-width: 479px){
+  .slider__items {
+    left: 50px;
+  }
+  .card-item__link{
+    max-width: 300px;
+    height: 500px;
+    /* border: 2px solid red; */
+  }
+}
+@media (max-width: 450px){
+  .slider__title{
+    font-size: 30px;
+  }
+  .slider__items {
+    left: 40px;
+  }
+}
+@media (max-width: 380px){
+  .slider__title{
+    font-size: 20px;
+  }
+  .slider__items {
+    left: 0px;
+  }
+  .card-item__link{
+    max-width: 250px;
+    height: 500px;
+    /* border: 2px solid red; */
+  }
+}
