--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -19,31 +19,61 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/estilos/register.css" />
+    <link rel="stylesheet" href="/estilos/login.css" />
   </head>
   <body>
     <%- include ('../partials/header') %>
 
     <!-- inicio de cuenta -->
 
-    <div class="container">
-      <label for="uname"><b>Nombre de Usuario</b></label>
-      <input
-        type="text"
-        placeholder="Ingrese su nombre de usuario"
-        name="uname"
-        required
-      />
+    <div class="form__container">
+      <form id="formulario" action="envio.php" method="post" target="_blank">
+        <h2>INGRESAR A MI CUENTA</h2>
 
-      <label for="psw"><b>Contraseña</b></label>
-      <input
-        type="password"
-        placeholder="Ingrese su contraseña"
-        name="psw"
-        required
-      />
-
-      <button type="submit" class="btn">Registrarse</button>
+        <div class="form-group ">
+          <div class="input_log">
+            <label for="email">Email:</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="johndoe@correo.com"
+            class="email"
+          />
+          </div>
+          
+          <div class="error-message" id="emailError"></div>
+        </div>
+        <div class="form-group ">
+          <div class="input_log pass">
+            <label for="password">Contraseña:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="••••••••••••••••••"
+            required
+            class="password"
+          />
+          </div>
+          
+          <div class="error-message" id="passwordError"></div>
+        </div>
+        <div class=" input_box">
+          <button type="submit">Ingresar</button>
+          <label
+            ><input
+              type="checkbox"
+              name="recordarContraseña"
+              value="Recordarme"
+              class="mycheck"
+            />Recordarme</label
+          >
+        </div>
+        <div class="form_pass">
+          <a href="#">Olvidé mi contraseña</a>
+        </div>
+      </form>
     </div>
 
     <!--footer-->
@@ -55,6 +85,7 @@
       integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g"
       crossorigin="anonymous"
     ></script>
-    <script src="../../js/register.js"></script>
+    <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
+    <script src="/js/login.js"></script>
   </body>
 </html>
