--- a/src/views/shop/item.ejs
+++ b/src/views/shop/item.ejs
@@ -28,91 +28,114 @@
     <main class="container">
       <!-- Seccion con el Baby Yoda BLUEBALL -->
       <section class="item">
+
+        <picture class="item__card">
+          <img class="item__card-front" src="/<%=item.img_front%>" alt="<%=item.product_description%>"/>
+          <img class="item__card-back" src="/<%=item.img_back%>" alt="<%=item.product_description%>"/>
+        </picture>
+        <article class="item__info">
+          <p class="item__info--license"><%= item.category_name %></p>
+          <h3 class="item__info--name"><%= item.product_name %></h3>
+          <p class="item__info--description"><%= item.product_description%></p>
+          <p class="item__info--price">$ <%= item.product_price %></p>
+          <div class="item__cart">
+            <div>
+              <button id="subtract" class="item__quantity" type="button">-</button>
+              <input class="item__input" type="text" placeholder="0" name="quantity" id="quantity">
+              <button id="add" class="item__quantity" type="button">+</button>
+            </div>
+            <button class="item__agregate" type="submit" id="addToCartBtn">Agregar al carrito</button>
+          </div>
+          <p class="item__promo">
+            <a href="#">Ver metodos de pago</a> - <%= item.dues %> CUOTAS SIN INTERES
+          </p>
         </article>
+
       </section>
+
       <section class="slider container glide">
         <h2 class="slider__title">PRODUCTOS RELACIONADOS</h2>
         <!-- En la docu de la libreria nos pide agregar un nuevo div con la clase que se indica -->
         <div class="glide__track" data-glide-el="track">
           <ul class="slider__items glide__slides">
-             <li class="slider__item glide__slide">
+            <li class="slider__item glide__slide">
               <article class="card-item">
-                <a class="card-item__link" href="./inicio">
+                <!-- a este ultimo no seguimos con Bem, pues es una especie de tarjeta que se repite en las distintas paginas -->
+                <a class="card-item__link" href="/shop/item/<%=itemsGlide[0].product_id%>">
+                  <div class="card-item__content">
+                    <p class="card-item__license"><%=itemsGlide[0].category_name%></p>
+                    <h4 class="card-item__name"><%=itemsGlide[0].product_name%></h4>
+                    <p class="card-item__price">$<%=itemsGlide[0].product_price%></p>
+                    <p class="card-item__promo"><%=itemsGlide[0].dues%> CUOTAS SIN INTERES</p>
+                  </div>
                   <picture class="card-item__cover">
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="/img/multimedia/star-wars/trooper-1.webp"
-                      alt="Figura coleccionable Funko de un StormTrooper"
+                      src="/<%=itemsGlide[0].img_front%>"
+                      alt="<%=itemsGlide[0].product_description%>"
                     />
                     <img
                       class="card-item__img--back"
-                      src="/img/multimedia/star-wars/trooper-box.webp"
-                      alt="Figura coleccionable Funko de un StormTrooper en caja"
+                      src="/<%=itemsGlide[0].img_back%>"
+                      alt="<%=itemsGlide[0].product_description%>"
                     />
                   </picture>
-                  <div class="card-item__content">
-                    <p class="card-item__license"><%= item.license_name %></p>
-                    <h4 class="card-item__name"><%= item.product_name %></h4>
-                    <p class="item_description"><%= item.product_description %></p>
-                    <p class="card-item__price">$ <%= item.product_price %>.-</p>
-                    
-                  </div>
                 </a>
               </article>
             </li>
 
             <li class="slider__item glide__slide">
               <article class="card-item">
-                <a class="card-item__link" href="./item">
+                <a class="card-item__link" href="/shop/item/<%=itemsGlide[1].product_id%>">
+                  <div class="card-item__content">
+                    <p class="card-item__license"><%=itemsGlide[1].category_name%></p>
+                    <h4 class="card-item__name"><%=itemsGlide[1].product_name%></h4>
+                    <p class="card-item__price">$<%=itemsGlide[1].product_price%></p>
+                    <p class="card-item__promo"><%=itemsGlide[0].dues%> CUOTAS SIN INTERES</p>
+                  </div>
                   <picture class="card-item__cover">
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="/img/multimedia/pokemon/pidgeotto-1.webp"
-                      alt="Figura coleccionable Funko de un Pidgeotto"
+                      src="/<%=itemsGlide[1].img_front%>"
+                      alt="<%=itemsGlide[1].product_description%>"
                     />
                     <img
                       class="card-item__img--back"
-                      src="/img/multimedia/pokemon/pidgeotto-box.webp"
-                      alt="Figura coleccionable Funko de un Pidgeotto en caja"
+                      src="/<%=itemsGlide[1].img_back%>"
+                      alt="<%=itemsGlide[1].product_description%>"
                     />
                   </picture>
-                  <div class="card-item__content">
-                    <p class="card-item__license">POKEMON</p>
-                    <h4 class="card-item__name">PIDGEOTTO</h4>
-                    <p class="card-item__price">$1799.99</p>
-                    <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
-                  </div>
                 </a>
               </article>
             </li>
 
             <li class="slider__item glide__slide">
               <article class="card-item">
-                <a class="card-item__link" href="./item">
+                <a class="card-item__link" href="/shop/item/<%=itemsGlide[2].product_id%>">
+                  <div class="card-item__content">
+                    <p class="card-item__license"><%=itemsGlide[2].category_name%></p>
+                    <h4 class="card-item__name"><%=itemsGlide[2].product_name%></h4>
+                    <p class="card-item__price">$<%=itemsGlide[2].product_price%></p>
+                    <p class="card-item__promo"><%=itemsGlide[2].dues%> CUOTAS SIN INTERES</p>
+                  </div>
                   <picture class="card-item__cover">
                     <span class="card-item__tag">NUEVO</span>
                     <img
                       class="card-item__img--front"
-                      src="/img/multimedia/harry-potter/luna-1.webp"
-                      alt="Figura coleccionable Funko de un Luna Lovegood"
+                      src="/<%=itemsGlide[2].img_back%>"
+                      alt="<%=itemsGlide[2].product_description%>"
                     />
                     <img
                       class="card-item__img--back"
-                      src="/img/multimedia/harry-potter/luna-box.webp"
-                      alt="Figura coleccionable Funko de un Luna Lovegood en caja"
+                      src="/<%=itemsGlide[2].img_back%>"
+                      alt="<%=itemsGlide[2].product_description%>"
                     />
                   </picture>
-                  <div class="card-item__content">
-                    <p class="card-item__license">HARRY POTTER</p>
-                    <h4 class="card-item__name">LUNA LOVEGOOD LION MASK</h4>
-                    <p class="card-item__price">$1799.99</p>
-                    <p class="card-item__promo">3 CUOTAS SIN INTERES</p>
-                  </div>
                 </a>
               </article>
-            </li> 
+            </li>
           </ul>
         </div>
         <!-- Pegamos de la libreria de glide en el set-up el siguiente div para los botones del slider -->
@@ -132,11 +155,11 @@
   <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.4.1/dist/glide.min.js"></script>
-    <script src="../../js-fede/item-generator.js"></script>
-    <script src="../../js-fede/productsData.js"></script>
-    <script src="../../js-fede/item.js"></script>
+    <!-- <script src="../../js-fede/item-generator.js"></script>
+    <script src="../../js-fede/productsData.js"></script> -->
+    <!-- <script src="../../js-fede/item.js"></script> -->
     <!-- hay que agregar este nuevo script para que funcione glide: -->
-    <script src="/public/js-fede/item-glide-functions.js"></script>
-    <script src="/public/js-fede/glide.js"></script>
+    <!-- <script src="/public/js-fede/item-glide-functions.js"></script> -->
+    <script src="/js-fede/glide.js"></script>
   </body>
 </html>
