--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -12,12 +12,12 @@
       content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
     />
     <title><%= title %> |Funkoshop</title>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
-    />
+    /> -->
 
     <link rel="stylesheet" href="/estilos/shop.css" />
   </head>
@@ -71,36 +71,32 @@
                 </fieldset>
             </form>
         </aside> <!-- Fin Aside -->
-        <main> <!-- Inicio Main -->
-    
+        <main>
             <section class="catalogue">
-               <ul class ="shop__items">
-                <% data.forEach (item =>{ %>
-                    <li class="shop__item">
-                 <article class="card-item">
-                    <a  class= "card-item__link"  href="/shop/item/<%= item.product_id %>">
-                            <picture class="card-item__cover">
-                                <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src= "<%= item.img_front  %>" alt="imagen">
-                                <img class="card-item__img--back" src="<%= item.img_back %>" alt="imagen en caja">
-                            </picture>
-                         <div class="card-item__content">
-                              <p class="card-item__licence"><%= item.category_name %></p>
-                              <h4 class="card-item__name"><%= item.product_name %></h4>
-                              <p class="card-item__price">$ <%= item.product_price %>.-</p>
-                              <p class="card-item__promo"> CUOTAS SIN INTERES <%= item.dues %></p>
-                         </div>
-                    </a>
-                 </article>
+                <div class="catalogue__grilla"><% data.forEach((item) =>{%>
+                        <div class="catalogue__product">
+                            <article class="card-item">
+                                <a class="card-item__link" href="/shop/item/<%= item.product_id %>">
+                                    <picture class="card-item__cover">
+                                        <span class="card-item__tag">Nuevo</span>
+                                        <img class="card-item__img--front" src="<%= item.img_front  %>" alt="<%= item.product_description  %>">
+                                        <img class="card-item__img--back" src="<%= item.img_back %>" alt="<%= item.product_description  %>">
+                                    </picture>
+                                    <div class="card-item__content">
+                                        <p class="card-item__licence"><%= item.category_name %></p>
+                                        <p class="card-item__name"><%= item.product_name %></p>
+                                        <p class="card-item__price">$ <%= item.product_price %></p>
+                                        <p class="card-item__promo"><%= item.dues %> CUOTAS SIN INTERÉS</p>
+                                    </div>
+                                </a>
+                            </article>
+                        </div>
+                    <%})%></div>
 
-                 </li>
-
-                 <%   }) %>
-
-               </ul>
             </section>
+            
     
-            <section">
+            <section>
                 <ul class="pagination__list">
                     <li><a href="#"></a></li>
                     <li class="active"><a href="#">1</a></li>
@@ -112,14 +108,14 @@
                 </ul>
             </section>
 
-        </main> <!-- Fin Main -->
+        </main>
     </div>
 
 <%- include ('../partials/footer') %>
 
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
-    <script src="/public/js-fede/productsData.js"></script>
-    <script src="/public/js-fede/shop.js"></script>
+    <!-- <script src="/public/js-fede/productsData.js"></script> -->
+    <!-- <script src="/public/js-fede/shop.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script> 
 </body>
 
